Wed Oct 13 00:03:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_PRINTF_PREFIX): check for printf format
	  specifier if possible.

Tue Oct 12 23:58:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_open_osfhandle, rb_w32_wopen, rb_w32_pipe):
	  use uintptr_t instead of long for win64.

	* win32/win32.c (socketpair_internal): suppress warnings.

	* win32/win32.c (ftruncate): use HANDLE instead of long for win64.

	* vsnprintf.c (BSD_vfprintf): fix cast.

	* numeric.c (rb_num2fix): result of rb_num2long is SIGNED_VALUE.

	* compile.c (iseq_build_body), error.c (set_syserr, get_syserr),
	  (syserr_initialize), gc.c (define_final, rb_gc_copy_finalizer),
	  (run_final), hash.c (rb_hash_aref, rb_hash_lookup2),
	  (rb_hash_fetch_m, rb_hash_clear, rb_hash_aset, eql_i),
	  iseq.c (iseq_load, iseq_data_to_ary), marshal.c (r_symlink),
	  thread.c (rb_thread_local_aref),
	  variable.c (generic_ivar_remove, ivar_get, rb_const_get_0),
	  (rb_cvar_get), vm.c (rb_vm_check_redefinition_opt_method),
	  vm_insnhelper.c (vm_get_ev_const), vm_method.c (remove_method),
	  ext/iconv/iconv.c (map_charset): use st_data_t.

	* compile.c (iseq_build_body), insns.def (getglobal, setglobal),
	  iseq.c (iseq_load, iseq_data_to_ary), util.c (valid_filename):
	  use VALUE.

	* gc.c (obj_free, rb_objspace_call_finalizer): fix truncating
	  cast.

	* gc.c (mark_current_machine_context): suppress warnings.

	* compile.c (iseq_compile_each): fix truncating cast.

	* cont.c (fiber_setcontext): missing variable definition.

Tue Oct 12 19:25:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* error.c (exc_to_s): use OBJ_INFECT.

	* error.c (name_err_to_s): ditto.

	* error.c (name_err_mesg_to_str): ditto.

	* error.c (syserr_initialize): ditto.

Tue Oct 12 19:07:55 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* error.c (syserr_initialize): taint message if mesg is given
	  and it is tainted.

Tue Oct 12 18:25:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>
